[project]
name = "yanitao-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Yani Tao",email = "197805914+yanitao@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "yanitao"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
